Adds sealed secrets cert and key in config.yaml
* Generates key and cert in for sealed secrets if not provided

* Check for existence for the sealed secrets private key and cert,
  raise an error if only one of the two, or a non matching pair
  is provided

* Install the sealed secrets ctlr in all tracks in setup.sh

* Adds unit tests for sealed secrets values

* Validates that the provided cert matches the sealed secrets key

* Adds sealed-secrets-controller.yaml manifest in cluster/manifests

Signed-off-by: Dinos Kousidis <dinos@weave.works>

--- a/test/integration/test/config.yaml
+++ b/test/integration/test/config.yaml
@@ -57,6 +57,14 @@ dockerIOUser: 'dummy'
 # Path to a file containing password for docker hub user account (required)
 dockerIOPasswordFile: '/etc/passwd'
 
+# Path to a certificate used to encrypt sealed secrets.
+# If left blank a self signed certificate will be created.
+sealedSecretsCertificate: ""
+
+# Path to a private key used to decrypt sealed secrets.
+# If left blank a new private key will be created.
+sealedSecretsPrivateKey: ""
+
 #
 # EKS-specific configuration (only required for "eks" clusters)
 #
