--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -3,7 +3,7 @@ fullnameOverride: ""
 
 enabled: true
 image:
-  repository: weaveworks/wkp-ui-server
+  repository: weaveworks/ui-server
   tag: master-5a06f11
   pullSecrets: []
   pullPolicy: IfNotPresent
@@ -33,7 +33,7 @@ ingress:
 service:
   name: wkp-ui-server
   port: 80
-config: # remember to consult `app/ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
+config: # remember to consult `ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
   gitRepo:
     # e.g. git@github.com:weaveworks/wkp-core.git
     url: ''
