--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -259,6 +259,8 @@ jobs:
             ssh-add -D
             ssh-add user-ssh-key
 
+            go test -v -run TestEntitlements
+
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
 
