--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -251,9 +251,9 @@ jobs:
             export SKIP_COMPONENTS=true
             export UPGRADE_VERSION=1.14.10
             cd test/integration/test
-            sed -i "s/gitHostOrg:.*/gitHostOrg: $WKP_GIT_HOST_USER/" config.yaml
+            sed -i "s/gitProviderOrg:.*/gitProviderOrg: $WKP_GIT_PROVIDER_USER/" config.yaml
 
-            echo $WKP_GIT_HOST_PRIVATE_KEY | base64 -d > user-ssh-key
+            echo $WKP_GIT_PROVIDER_PRIVATE_KEY | base64 -d > user-ssh-key
             chmod 600 user-ssh-key
             eval "$(ssh-agent -s)"
             ssh-add -D
@@ -262,6 +262,6 @@ jobs:
             go test -v -run TestEntitlements
 
             # e.g. wkp-ci-test-bot from 1passwords
-            export GIT_HOST_TOKEN=$WKP_GIT_HOST_TOKEN
+            export GIT_PROVIDER_TOKEN=$WKP_GIT_PROVIDER_TOKEN
 
             go test -v -run TestUpgrade --timeout=99999s
