--- a/test/integration/test/config.yaml
+++ b/test/integration/test/config.yaml
@@ -1,5 +1,6 @@
 track: wks-footloose
 clusterName: 'upgrade-test'
+gitProvider: github
 gitProviderOrg: ''
 dockerIOUser: 'dummy'
 dockerIOPasswordFile: '/etc/passwd'
