trigger workflow on PRs too, thanks Dinos!

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,8 +1,12 @@
 name: docs
 
 on:
-  pull_request:
+  # Trigger the workflow on push or pull request,
+  # but only for the master branch
   push:
+    branches:
+      - master
+  pull_request:
     branches:
       - master
 
