[WKP-350] Store deploy key and image pull information in git repository as sealed secrets (#1126)
* Store deploy key in git repository as a sealed secret

* fix annotations and bundle kubeseal

* add image pull secret

* add image pull secret info to sealed secrets; fix upgrade test so that KUBECONFIG setting does not interfere with creation of sealed secrets

* remove sealed secret annotations from existing secrets since we are now planning to update the secrets directly from flux, not from corresponding sealed secrets

Co-authored-by: Jerry Jackson <jerry@weave.works>

--- a/test/integration/test/config.yaml
+++ b/test/integration/test/config.yaml
@@ -1,6 +1,6 @@
 track: wks-footloose
 clusterName: 'upgrade-test'
-gitProvider: github
+gitProvider: 'github'
 gitProviderOrg: ''
 dockerIOUser: 'dummy'
 dockerIOPasswordFile: '/etc/passwd'
