--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,18 +70,22 @@ jobs:
             if [ -z "$TAG" ]; then
               TAG=$(./tools/image-tag)
             fi
+
+            # aws gets its credential through the AWS_ACCESS_KEY_ID and
+            # AWS_SECRET_ACCESS_KEY environment variables.
+            export AWS_ACCESS_KEY_ID=$WKP_S3_AWS_ACCESS_KEY_ID
+            export AWS_SECRET_ACCESS_KEY=$WKP_S3_AWS_SECRET_ACCESS_KEY
+
+            # Upload uniquely tagged binaries
             if [ -z "${CI_BRANCH}" -o "${CI_BRANCH}" == "master" ]; then
-              # aws gets its credential through the AWS_ACCESS_KEY_ID and
-              # AWS_SECRET_ACCESS_KEY environment variables.
-              export AWS_ACCESS_KEY_ID=$WKP_S3_AWS_ACCESS_KEY_ID
-              export AWS_SECRET_ACCESS_KEY=$WKP_S3_AWS_SECRET_ACCESS_KEY
-
-              # legacy binary name
-              aws s3 cp cmd/wk/wk s3://weaveworks-wkp/wk-${TAG}
-
-              # publish linux and darwin binaries
               aws s3 cp cmd/wk/wk s3://weaveworks-wkp/wk-${TAG}-linux-amd64
               aws s3 cp cmd/wk/wk-darwin-amd64 s3://weaveworks-wkp/wk-${TAG}-darwin-amd64
+            fi
+
+            # Upload a "master" binary for easy access to latest master build
+            if [ "${CI_BRANCH}" == "master" ]; then
+              aws s3 cp cmd/wk/wk s3://weaveworks-wkp/wk-master-linux-amd64
+              aws s3 cp cmd/wk/wk-darwin-amd64 s3://weaveworks-wkp/wk-master-darwin-amd64
             fi
       - run:
           name: Publish helm chart
