[WKP-415] Make upgrade test work starting and ending with arbitrary specified versions (#1165)
* initial changes for upgrading to 1.16

* Fix creating footloose cluster with non-default version; rationalize yaml operations

* Fix nit from refactoring

* switch back to working k8s version for now

* remove gitProviderOrg value from test config

* address review comments

Co-authored-by: Jerry Jackson <jerry@weave.works>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,7 +242,7 @@ jobs:
             cp /tmp/workspace/cmd/wk/wk cmd/wk/wk
 
             export SKIP_COMPONENTS=true
-            export UPGRADE_VERSION=1.14.10
+            export KUBERNETES_VERSIONS='1.14.1,1.14.10'
             cd test/integration/test
             sed -i "s/gitProviderOrg:.*/gitProviderOrg: $WKP_GITHUB_USER/" config.yaml
 
