Wkp 410/upgrade cli (#1167)
* initial changes for upgrading to 1.16

* Fix creating footloose cluster with non-default version; rationalize yaml operations

* remove gitProviderOrg value from test config

* first attempt

* command working

* Build command tests into a framework

* fix lint error

* fix config unit test

* set entitlement environment variable before running upgrade command

* Remove unused "out" after deleting debug statement

* Fix env in error path tests

* delete repo pre-emptively to allow for canceled test leaving repo behind

* remove local change to config.yaml

* Allow upgrade from major.minor.micro to major.minor+1.micro-<n>

* rebase with upstream changes; fix integration test invocation for install test

Co-authored-by: Jerry Jackson <jerry@weave.works>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,9 +241,11 @@ jobs:
             # get a wk binary from the attached workspace to use in the integration test
             cp /tmp/workspace/cmd/wk/wk cmd/wk/wk
 
+            cd test/integration/test
             export SKIP_COMPONENTS=true
             export KUBERNETES_VERSIONS='1.14.1,1.14.10'
-            cd test/integration/test
+            export KUBERNETES_VERSION=1.14.1
+
             sed -i "s/gitProviderOrg:.*/gitProviderOrg: $WKP_GITHUB_USER/" config.yaml
 
             echo $WKP_GITHUB_PRIVATE_KEY | base64 -d > user-ssh-key
@@ -254,7 +256,7 @@ jobs:
 
             go test -v -run TestEntitlements
 
-            go test -v -run TestCLeanRunMultipleSetupInstall
+            go test -v -run TestRunMultipleSetupInstall
 
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
