--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,10 +32,10 @@ workflows:
       - integration-tests:
           requires:
             - build
-          filters:
-            branches:
-              only:
-                - master
+          # filters:
+          #   branches:
+          #     only:
+          #       - master
 
 jobs:
   build:
@@ -260,6 +260,10 @@ jobs:
 
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
+
+            go test -v -run TestHubAuthCheck
+            
+            go test -v -run TestHubLocationMessage
 
             go test -v -run TestUpgrade --timeout=99999s
 
