Update grafana, tiller, helm-operator, wkp-ui
Signed-off-by: Dinos Kousidis <dinos@weave.works>

--- a/ui/chart/wkp-ui/templates/deployment.yaml
+++ b/ui/chart/wkp-ui/templates/deployment.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.enabled }}
 {{- $configMapName := .Values.config.homepage.clusterComponents.configMap.name -}}
 
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "wkp-ui.fullname" . }}-server
