Fix deployment label for wkp ui server
Signed-off-by: Dinos Kousidis <dinos@weave.works>

--- a/ui/chart/wkp-ui/templates/deployment.yaml
+++ b/ui/chart/wkp-ui/templates/deployment.yaml
@@ -5,7 +5,12 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "wkp-ui.fullname" . }}-server
+  labels:
+    name: {{ include "wkp-ui.fullname" . }}-server
 spec:
+  selector:
+    matchLabels:
+      name: {{ include "wkp-ui.fullname" . }}-server
   replicas: 1
   revisionHistoryLimit: 2
   minReadySeconds: 30
