--- a/ui/chart/wkp-ui/values.yaml
+++ b/ui/chart/wkp-ui/values.yaml
@@ -34,10 +34,11 @@ service:
   name: wkp-ui-server
   port: 80
 config: # remember to consult `ui/src/entities/config.ts` before making any changes to this file. (see see https://github.com/weaveworks/wkp-ui/issues/200)
+  demoMode: false,
   gitRepo:
     # e.g. git@github.com:weaveworks/wkp-core.git
     url: ''
-    provider: '' # 'gitlab' or 'github'
+    provider: 'github' # 'gitlab' or 'github'
     branch: 'master'
     deployKeySecret:
       name: 'wkp-ui-git-deploy-key'
