WKP-455 add cluster creation test and refactor integration tests (#1194)
* add cluster creation test and refactor integration tests

* more cleanup, update config.yml

* more cleanup

* fix hub auth test

* use 1.14.x for now

* go back to later versions

* switch back to 1.15.x for creation test

* add filter back so we only run integration tests on master

* Make sure cluster name is lower case

* update to using wksctl 0.8.2-beta.4 and add test support for extra arguments to kube-apiserver and kubelet

* small fixes

* get output from failing command in test and extend timeout

* Allow 1.17.5 as an upgrade target; get output from upgrade command

* Wait for CRD before checking its condition

* put the master branch integration test filter back

Co-authored-by: Jerry Jackson <jerry@weave.works>

--- a/test/integration/test/config.yaml
+++ b/test/integration/test/config.yaml
@@ -1,5 +1,5 @@
 track: wks-footloose
-clusterName: 'upgrade-test'
+clusterName: 'integration-test'
 gitProvider: 'github'
 gitProviderOrg: ''
 dockerIOUser: 'dummy'
@@ -15,6 +15,16 @@ wksConfig:
   kubernetesVersion: '1.14.1'
   serviceCIDRBlocks: [10.96.0.0/12]
   podCIDRBlocks: [192.168.0.0/16]
+  apiServerArguments:
+    - name: alsologtostderr
+      value: "true"
+    - name: audit-log-maxsize
+      value: "10000"
+  kubeletArguments:
+    - name: alsologtostderr
+      value: "true"
+    - name: container-runtime
+      value: docker
   sshConfig:
     sshUser: 'root'
     sshKeyFile: ''
