--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -244,8 +244,9 @@ jobs:
 
             cd test/integration/test
             export SKIP_COMPONENTS=true
-            export KUBERNETES_VERSIONS='1.15.7,1.16.3'
+            export UPGRADE_VERSIONS='1.15.7,1.16.3,1.17.5'
             export KUBERNETES_VERSION=1.14.1
+            export CLUSTER_VERSIONS=1.16.3,1.17.5
 
             sed -i "s/gitProviderOrg:.*/gitProviderOrg: $WKP_GITHUB_USER/" config.yaml
 
@@ -257,12 +258,15 @@ jobs:
 
             go test -v -run TestEntitlements
 
+            # run before setting GITHUB_TOKEN
+            go test -v -run TestHubAuthCheck
+
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
 
             go test -v -run TestRunMultipleSetupInstall
 
-            go test -v -run TestHubAuthCheck
+            go test -v -run TestClusterCreation --timeout=99999s
 
             go test -v -run TestUpgrade --timeout=99999s
 
