Provision GCE VMs for integration tests
* Set docker image for tests to quay.io/wks/build

* Fix path to setup.sh in run-integration-tests.sh and add ssh-key in config.yaml

* Adds script to update config.yaml with GCP node IPs

* Destroy GCP resources even if job fails

* Name GCE resources: $CIRCLE_JOB-$CIRCLE_BUILD_NUM

Signed-off-by: Dinos Kousidis <dinos@weave.works>

--- a/test/integration/test/config.yaml
+++ b/test/integration/test/config.yaml
@@ -1,4 +1,4 @@
-track: wks-footloose
+track: wks-ssh
 clusterName: 'integration-test'
 gitProvider: 'github'
 gitProviderOrg: ''
@@ -26,9 +26,18 @@ wksConfig:
     - name: container-runtime
       value: docker
   sshConfig:
-    sshUser: 'root'
-    sshKeyFile: ''
-    machines: []
+    sshUser: 'weaveworks-cit'
+    sshKeyFile: '/root/.ssh/weaveworks_cit_id_rsa'
+    machines:
+      - role: master
+        privateAddress: PRIVATE_IP
+        publicAddress: PUBLIC_IP
+      - role: master
+        privateAddress: PRIVATE_IP
+        publicAddress: PUBLIC_IP
+      - role: worker
+        privateAddress: PRIVATE_IP
+        publicAddress: PUBLIC_IP
   footlooseConfig:
     backend: docker
     controlPlaneNodes: 2
