--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -273,6 +273,10 @@ jobs:
             ssh-add -D
             ssh-add user-ssh-key
 
+            # provision 3 GCE VMs
+            ../bin/internal/run-integration-tests.sh up
+            ../bin/internal/update-config-with-node-info.sh
+
             go test -v -run TestEntitlements
 
             # run before setting GITHUB_TOKEN
@@ -281,9 +285,9 @@ jobs:
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
 
-            go test -v -run TestRunMultipleSetupInstall
+            # go test -v -run TestRunMultipleSetupInstall
 
-            go test -v -run TestClusterCreation --timeout=99999s
+            # go test -v -run TestClusterCreation --timeout=99999s
 
             go test -v -run TestGenerateSecrets --timeout=600s
 
@@ -342,3 +346,11 @@ jobs:
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
 
             go test -v -run TestUpgrade --timeout=99999s
+            ../bin/internal/run-integration-tests.sh destroy
+      - run:
+          # Ensures that the GCP resources are deleted even if the previous step fails
+          name: Destroy GCP resources
+          command: |
+            cd test/integration/test
+            ../bin/internal/run-integration-tests.sh destroy
+          when: on_fail
