--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -285,11 +285,20 @@ jobs:
             # e.g. wkp-ci-test-bot from 1passwords
             export GITHUB_TOKEN=$WKP_GITHUB_TOKEN
 
-            # go test -v -run TestRunMultipleSetupInstall
+            go test -v -run TestRunMultipleSetupInstall
 
-            # go test -v -run TestClusterCreation --timeout=99999s
+            go test -v -run TestClusterCreation --timeout=99999s
 
             go test -v -run TestGenerateSecrets --timeout=600s
+
+            ../bin/internal/run-integration-tests.sh destroy
+      - run:
+          # Ensures that the GCP resources are deleted even if the previous step fails
+          name: Destroy GCP resources
+          command: |
+            cd test/integration/test
+            ../bin/internal/run-integration-tests.sh destroy
+          when: on_fail
 
   integration-tests-upgrade:
     machine:
